--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-Когда-нибудь здесь появится сайт.
+<H4>Возможно когда-нибудь здесь появится сайт. </H4><br>
 
-А пока смотрите материалы в группе: <a href="http://vk.com/spguide">vk.com/spguide</a>
+<H4>А уже скоро появятся материалы в группе в удобной для вас соц.сети: <br>
+  <a href="http://vk.com/spguide">vk.com/spguide</a>
+  <a href="http://t.me/spguide">t.me/spguide</a>
+  <a href="http://fb.com/gropus/spguide.org">fb.com/spguide.org</a>
+</H4>
