--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <H4>Возможно когда-нибудь здесь появится сайт. </H4><br>
 
 <H4>А уже скоро появятся материалы в группе в удобной для вас соц.сети: <br>
-  <a href="http://vk.com/spguide">vk.com/spguide</a>
-  <a href="http://t.me/spguide">t.me/spguide</a>
-  <a href="http://fb.com/gropus/spguide.org">fb.com/spguide.org</a>
+  <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
+  <a href="http://t.me/spguide">t.me/spguide</a> <br>
+  <a href="http://fb.com/groups/spguide.org">fb.com/spguide.org</a>
 </H4>
