--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<H3> Sport Programming Guide - путеводитель в мире спортивного программирования <H3>
+  
 <H4>Возможно когда-нибудь здесь появится сайт. </H4><br>
 
 <H4>А уже скоро появятся материалы в группе в удобной для вас соц.сети: <br>
