--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
 <H4>Возможно когда-нибудь здесь появится сайт. </H4><br>
 
-<H4>А уже скоро появятся материалы в группе: <br>
+<H4>А уже сейчас есть материалы в группе: <br>
   <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
 </H4>
 
