--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
-<H3> Sport Programming Guide - путеводитель в мире спортивного программирования <H3>
-  
-<H4>Возможно когда-нибудь здесь появится сайт. </H4><br>
-
-<H4>А уже сейчас присоединяйтесь к нашей группе: <br>
+<H4>По этой ссылке можно следить за советами по развитию спортивного программирования: <br>
   <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
 </H4>
-
-<!--- <H4>А уже скоро появятся материалы в группе в удобной для вас соц.сети: <br>
-  <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
-  <a href="http://t.me/spguide">t.me/spguide</a> <br>
-  <a href="http://fb.com/groups/spguide.org">fb.com/spguide.org</a>
-</H4> 
---->
+<H4>Остальные части сайта пока находятся в разработке. </H4><br>
