--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<H4>По этой ссылке можно следить за советами по развитию спортивного программирования: <br>
-  <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
-</H4>
-<H4>Остальные части сайта пока находятся в разработке. </H4><br>
+<html>
+  <head>
+    <title> Sport Programming Guide </title>
+  </head>
+  
+  <style>
+     .page_header {
+    height: 230px;
+    background: #d2d1d7 url(/header.png) no-repeat center;
+    margin-bottom: 6px;
+    }
+  </style>
+  <body>
+    <div class="page_header"></div>
+    <H4>По этой ссылке можно следить за советами по развитию спортивного программирования: <br>
+      <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
+    </H4>
+    <H4>Остальные части сайта пока находятся в разработке. </H4><br>
+  </body>
+</html>
