--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
   </head>
   
   <style>
-     .page_header {
+    .allpage {
+    min-width: 620px;
+    max-width: 1260px;
+    margin: 0 auto;
+} .page_header {
     height: 230px;
     background: #d2d1d7 url(/header.png) no-repeat center;
     margin-bottom: 6px;
     }
   </style>
   <body>
+    
+    <div class="allpage">
     <div class="page_header"></div>
-    <H4>По этой ссылке можно следить за советами по развитию спортивного программирования: <br>
-      <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
-    </H4>
-    <H4>Остальные части сайта пока находятся в разработке. </H4><br>
+      <div>
+        <H4>По этой ссылке можно следить за советами по развитию спортивного программирования: <br>
+            <a href="http://vk.com/spguide">vk.com/spguide</a> <br>
+        </H4>
+        <H4>Остальные части сайта пока находятся в разработке. </H4><br>
+      </div>
+    </div>
   </body>
 </html>
