--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     margin: 0 auto;
 } .page_header {
     height: 230px;
-    background: #d2d1d7 url(/header.png) no-repeat center;
+    background: #d2d1d7 url(header.png) no-repeat center;
     margin-bottom: 6px;
     }
   </style>
