--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="allpage">
     <div class="page_header"></div>
       <font size="18">
-           Всем привет! 
+           Всем привет! <br>
            
            Думаешь, олимпиадная информатика только для гениев?<br>
            Мы считаем иначе и готовим всех. <br>
         <br>
-           Подавать заявку нужно здесь.
+           Подавать заявку нужно <a href="http://goo.gl/HJjffM"> здесь</a>. <br>
            До лагеря осталось совсем немного времени. Стоимость путёвки 19 800 рублей.<br>
            Даты: <b> 21 августа - 7 сентября </b> <br>
            Приглашаются все желающие школьники России, которые закончили <b>3-10 класс</b> в этом учебном году. <br>
@@ -38,7 +38,7 @@
            Посмотреть информацию о площадке можно на официальном <a href="http://www.dujonok.ru/"> сайте</a>.<br>
         <br>
            Информация о <a href="http://goo.gl/UKQA8G"> формате</a> нашей учёбы. Информация о <a href="http://goo.gl/zzmQnD"> формате</a> нашего досуга.
-        Отправляй заявку!
+        Отправляй <a href="http://goo.gl/HJjffM"> заявку</a>! <br>
         </font>
       
     </div>
