--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="allpage">
     <div class="page_header"></div>
-      <div padding="100">
+      <div style="padding:100">
       <font size="5">
            Всем привет! <br>
            
