--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
     <div class="page_header"></div>
       <div style="padding:100">
       <font size="5">
-           Всем привет! <br>
+           Привет! <br>
            
-           Думаешь, олимпиадная информатика только для гениев?<br>
-           Мы считаем иначе и готовим всех. <br>
-        <br>
-           Подавать заявку нужно <a href="http://goo.gl/HJjffM"> здесь</a>. <br>
-           До лагеря осталось совсем немного времени. Стоимость путёвки 19 800 рублей.<br>
-           Даты: <b> 21 августа - 7 сентября </b> <br>
-           Приглашаются все желающие школьники России, которые закончили <b>3-10 класс</b> в этом учебном году. <br>
-        <br>
-           У нас будут группы как для совсем начинающих, не умеющих программировать, так и для опытных олимпиадников. <br>
-           Преподаватели - олимпиадники из УрФУ (студенты и выпускники). <br>
-        <br>
-           В 2016, 2017, 2018 году УрФУ получил <b>медали Чемпионата мира</b> (помимо нас 3 медали за эти 3 года получили всего 2 вуза в мире). <br>
-           А с этого года мы решили поделиться нашим опытом и со школьниками.<br> 
-        <br>
-           Посмотреть информацию о площадке можно на официальном <a href="http://www.dujonok.ru/"> сайте</a>.<br>
-        <br>
-           Информация о <a href="http://goo.gl/UKQA8G"> формате</a> нашей учёбы. Информация о <a href="http://goo.gl/zzmQnD"> формате</a> нашего досуга.
-        Отправляй <a href="http://goo.gl/HJjffM"> заявку</a>! <br>
+           Думаешь, олимпиадная информатика только для гениев? <br>
+           Мы считаем иначе и тренируем всех. <br>
+           
+        Мы - это преподаватели-олимпиадники из УрФУ (студенты и выпускники). В 2016, 2017, 2018 году УрФУ получил медали Чемпионата мира по программированию  (помимо нас 3 медали за эти 3 года получили всего 2 вуза в мире). 
+
+С этого года мы решили поделиться нашим опытом и со школьниками. Мы проводим лагеря для всех, кто хочет прокачаться в программировании. <br>
+
+До следующего лагеря осталось совсем немного времени. Он пройдёт с 21 августа - 7 сентября. Стоимость путёвки 19 800 рублей. <br>
+
+Приглашаются все желающие школьники России, которые закончили 3-10 класс в прошлом учебном году. <br>
+
+У нас будут группы как для совсем начинающих, не умеющих программировать, так и для опытных олимпиадников.<br> 
+
+
+Подать заявку можно <a href="http://goo.gl/HJjffM"> здесь</a>. <br>
+
+Посмотреть информацию о площадке можно на официальном <a href="http://www.dujonok.ru/"> сайте</a>.<br>
+
+Информация о <a href="http://goo.gl/UKQA8G"> формате</a> нашей учёбы. Информация о <a href="http://goo.gl/zzmQnD"> формате</a> нашего досуга.<br>
+
+Отправляй заявку!<br>
+
         </font>
       </div>
     </div>
