--- a/index.html
+++ b/index.html
@@ -26,21 +26,28 @@
            Мы считаем иначе и тренируем всех. <br>
            
         Мы - это преподаватели-олимпиадники из УрФУ (студенты и выпускники). В 2016, 2017, 2018 году УрФУ получил медали Чемпионата мира по программированию  (помимо нас 3 медали за эти 3 года получили всего 2 вуза в мире). 
-
+<br>
 С этого года мы решили поделиться нашим опытом и со школьниками. Мы проводим лагеря для всех, кто хочет прокачаться в программировании. <br>
+<br>
 
-До следующего лагеря осталось совсем немного времени. Он пройдёт с 21 августа - 7 сентября. Стоимость путёвки 19 800 рублей. <br>
+До следующего лагеря осталось совсем немного времени. Он пройдёт с <b>21 августа - 7 сентября</b>. Стоимость путёвки <b>19 800</b> рублей. <br>
+<br>
 
-Приглашаются все желающие школьники России, которые закончили 3-10 класс в прошлом учебном году. <br>
+Приглашаются все желающие школьники России, которые закончили <b>3-10 класс</b> в прошлом учебном году. <br>
+<br>
 
 У нас будут группы как для совсем начинающих, не умеющих программировать, так и для опытных олимпиадников.<br> 
+<br>
 
 
 Подать заявку можно <a href="http://goo.gl/HJjffM"> здесь</a>. <br>
+<br>
 
 Посмотреть информацию о площадке можно на официальном <a href="http://www.dujonok.ru/"> сайте</a>.<br>
+<br>
 
 Информация о <a href="http://goo.gl/UKQA8G"> формате</a> нашей учёбы. Информация о <a href="http://goo.gl/zzmQnD"> формате</a> нашего досуга.<br>
+<br>
 
 Отправляй заявку!<br>
 
